Forgot to commit changes, no idea what's changed

--- a/MasterMind/TODO
+++ b/MasterMind/TODO
@@ -4,5 +4,5 @@
 - Optional code length
 - Maybe have max guesses configurable then have main panel in a scroll pane
 
-- Clear peg / clear all
+- Clear all
 - Generate random sequence
